--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@docusaurus/preset-classic": "3.1.1",
     "@easyops-cn/docusaurus-search-local": "^0.40.1",
     "@mdx-js/react": "^3.0.0",
+    "alibabacloud-nls": "^1.0.4",
     "clsx": "^2.0.0",
     "docusaurus": "^1.14.7",
     "prism-react-renderer": "^2.3.0",
